src/test/wacc/valid/array/stringFromArray.wacc
# char[] can be directly assigned to string

# Output:

# Program:

begin
  string a = ['a', 'b'] ;
  exit 0
end
