src/test/wacc/invalid/whack/q1.wacc
# how much wacc could a whack wacc whack,
# if a whack wacc could whack wacc

char[] arr = ['h', 105];
string[] s = [arr];
free s[0]
